--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,71 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Mis discos favoritos
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+  <ion-item style = "background-color: #00527F">
+      <img  (click) = "clickcover1()" item-start src = "../assets/Nightmare.jpg" height = "120px"/>
+      <h3 (click) = "clickbio1()">Avenged Sevenfold</h3>
+      <p (click) = "clicktracks1()">Nightmare</p>
+      <p>2010</p>
+      <ion-row (click) = "clickreview1()">
+          <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
+          <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
+      </ion-row>
+      <ion-icon name="play"></ion-icon>
+  </ion-item>
+
+  <ion-item style = "background-color: #565C60">
+        <img item-start src = "../assets/Metallica.jpg" height = "120px"/>
+        <h2>Metallica</h2>
+        <p>Metallica</p>
+        <p>1991</p>
+        <ion-row>
+            <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
+            <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
+        </ion-row>
+        <ion-icon name="play"></ion-icon>
+    </ion-item>
+
+    <ion-item style = "background-color: #2446A5">
+        <img item-start src = "../assets/Ride the Lightning.jpg" height = "120px"/>
+        <h2>Metallica</h2>
+        <p>Ride the Lightning</p>
+        <p>1984</p>
+        <ion-row>
+            <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
+            <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
+        </ion-row>
+        <ion-icon name="play"></ion-icon>
+    </ion-item>
+
+    <ion-item style = "background-color: #C62323">
+        <img item-start src = "../assets/Meliora.jpg" height = "120px"/>
+        <h2>Ghost</h2>
+        <p>Meliora</p>
+        <p>2015</p>
+        <ion-row>
+            <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
+            <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> <ion-icon name="star-half"></ion-icon> 
+        </ion-row>
+        <ion-icon name="play"></ion-icon>
+    </ion-item>
+
+    <ion-item style = "background-color: #464E54">
+        <img item-start src = "../assets/Back In Black.png" height = "120px"/>
+        <h2>AC/DC</h2>
+        <p>Back in Black</p>
+        <p>1980</p>
+        <ion-row>
+            <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
+            <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
+        </ion-row>
+        <ion-icon name="play"></ion-icon>
+    </ion-item>
+
 </ion-content>
