--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,11 +21,11 @@
   </ion-item>
 
   <ion-item style = "background-color: #565C60">
-        <img item-start src = "../assets/Metallica.jpg" height = "120px"/>
-        <h2>Metallica</h2>
-        <p>Metallica</p>
+        <img (click) = "clickcover2()" item-start src = "../assets/Metallica.jpg" height = "120px"/>
+        <h2 (click) = "clickbio2()">Metallica</h2>
+        <p (click) = "clicktracks2()">Metallica</p>
         <p>1991</p>
-        <ion-row>
+        <ion-row (click) = "clickreview2()">
             <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
             <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
         </ion-row>
@@ -33,11 +33,11 @@
     </ion-item>
 
     <ion-item style = "background-color: #2446A5">
-        <img item-start src = "../assets/Ride the Lightning.jpg" height = "120px"/>
-        <h2>Metallica</h2>
-        <p>Ride the Lightning</p>
+        <img (click) = "clickcover3()" item-start src = "../assets/Ride the Lightning.jpg" height = "120px"/>
+        <h2 (click) = "clickbiog3()">Metallica</h2>
+        <p (click) = "clicktracks3()">Ride the Lightning</p>
         <p>1984</p>
-        <ion-row>
+        <ion-row (click) = "clickreview3()">
             <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
             <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
         </ion-row>
@@ -45,25 +45,13 @@
     </ion-item>
 
     <ion-item style = "background-color: #C62323">
-        <img item-start src = "../assets/Meliora.jpg" height = "120px"/>
-        <h2>Ghost</h2>
-        <p>Meliora</p>
+        <img (click) = "clickcover4()" item-start src = "../assets/Meliora.jpg" height = "120px"/>
+        <h2 (click) = "clickbio4()">Ghost</h2>
+        <p (click) = "clicktracks4()">Meliora</p>
         <p>2015</p>
-        <ion-row>
+        <ion-row (click) = "clickreview4()">
             <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
             <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> <ion-icon name="star-half"></ion-icon> 
-        </ion-row>
-        <ion-icon name="play"></ion-icon>
-    </ion-item>
-
-    <ion-item style = "background-color: #464E54">
-        <img item-start src = "../assets/Back In Black.png" height = "120px"/>
-        <h2>AC/DC</h2>
-        <p>Back in Black</p>
-        <p>1980</p>
-        <ion-row>
-            <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
-            <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> <ion-icon name="star"></ion-icon> 
         </ion-row>
         <ion-icon name="play"></ion-icon>
     </ion-item>
